def/force-app/main/default/objects/Candidate__c/fields/Countofaapplications__c.field-meta.xml
<CustomField>
    <fullName>Countofaapplications__c</fullName>
    <label>Countofaapplications</label>
    <summaryForeignKey>Job_Application__c.Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>