def/force-app/main/default/objects/Candidate__c/fields/Hobby__c.field-meta.xml
<CustomField>
    <fullName>Hobby__c</fullName>
    <label>Hobby</label>
    <length>10</length>
    <type>Text</type>
</CustomField>