def/force-app/main/default/objects/Candidate__c/fields/Reasonforclearorreject__c.field-meta.xml
<CustomField>
    <fullName>Reasonforclearorreject__c</fullName>
    <label>Reasonforclearorreject</label>
    <type>TextArea</type>
</CustomField>