def/force-app/main/default/objects/Candidate__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <label>Skill</label>
    <length>50</length>
    <type>Text</type>
</CustomField>