def/force-app/main/default/objects/Candidate__c/validationRules/Prevent_Rejected_to_cleared_status.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Rejected_to_cleared_status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE( Status__c ),&quot;Rejected&quot;), NOT(ISPICKVAL( Status__c ,&quot;Rejected&quot;))
)</errorConditionFormula>
    <errorMessage>Rejected canndidate cannot change to cleared</errorMessage>
</ValidationRule>